minor grammar errors

--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/questionanswering-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/questionanswering-authoring.json
@@ -1718,7 +1718,7 @@
     },
     "ImportJobOptions": {
       "type": "object",
-      "description": "Project assets the needs to be imported.",
+      "description": "Project assets that need to be imported.",
       "properties": {
         "metadata": {
           "$ref": "#/definitions/QuestionAnsweringProjectMetadata",
