--- a/specification/cognitiveservices/data-plane/Language/preview/2025-05-15-preview/questionanswering-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2025-05-15-preview/questionanswering-authoring.json
@@ -1891,7 +1891,7 @@
     },
     "ImportJobOptions": {
       "type": "object",
-      "description": "Project assets the needs to be imported.",
+      "description": "Project assets that need to be imported.",
       "properties": {
         "metadata": {
           "$ref": "#/definitions/QuestionAnsweringProjectMetadata",
